Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65740

QML Camera on iOS crashes if user has previously selected Don't Allow to camera access request

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.2
    • 5.10.0
    • Multimedia
    • None
    • iOS 11.2.5, iPhone 6
    • iOS/tvOS/watchOS

      If on a previous run of an app the user selects Don't Allow to camera access request the app will crash.

       

      This can be seen in the QML Camera Example.

      1) Run app.

      2) At dialog '"declarative-camera" Would Like to Access the Camera' select Don't Allow.

      3) App handles lack of camera access correctly.

      4) Quit app

      5) Run app.

      6) App crashes on startup.

       

      The camera works correctly if Allow is selected or access is enabled in iOS settings.

       

      Possibly related to QTBUG-59134

       

      Application Output:

      Failed to create video device input

      ASSERT: "m_captureDevice" in file ./avfcamerautility.h, line 63

      program received signal 6, thread:74067;00:0000000000000000;01:0000000000000000;02:0000000000000000;03:18f3428401000000;04:14b1200601000000;05:00ee546b01000000;06:0a00000000000000;07:ffffffff00000000;08:0000000800000000;09:0000000400000000;0a:e015508401000000;0b:bc5eddb701000000;0c:bc5eddb701000000;0d:1800000000000000;0e:0100000000000000;0f:8108000000000000;10:4801000000000000;11:0000000000000000;12:5c926907f0ffffff;13:0600000000000000;14:805baab501000000;15:0000000000000000;16:0303000000000000;17:605caab501000000;18:0020abb501000000;19:0000000000000000;1a:78dce80701000000;1b:50c6aab501000000;1c:0100000000000000;1d:30ef546b01000000;1e:f8d24f8401000000;1f:00ef546b01000000;20:e8823e8401000000;21:00000000;metype:5;mecount:2;medata:10003;medata:6;memory:0x16b54ef30=70ef546b01000000bc6f358401000000;memory:0x16b54ef70=a0ef546b010000004883b70501000000;

      program received signal 6, thread:74067;00:0000000000000000;01:0000000000000000;02:0000000000000000;03:0100000000000000;04:0000000000000000;05:8096980000000000;06:0a00000000000000;07:ffffffff00000000;08:0000000800000000;09:0000000400000000;0a:e803000000000000;0b:bc5eddb701000000;0c:bc5eddb701000000;0d:1800000000000000;0e:0100000000000000;0f:8108000000000000;10:4801000000000000;11:0000000000000000;12:5c926907f0ffffff;13:0600000000000000;14:805baab501000000;15:0000000000000000;16:0303000000000000;17:605caab501000000;18:0020abb501000000;19:0000000000000000;1a:78dce80701000000;1b:50c6aab501000000;1c:0100000000000000;1d:f0ee546b01000000;1e:f8d24f8401000000;1f:c0ee546b01000000;20:e8823e8401000000;21:00000000;metype:5;mecount:2;medata:10003;medata:6;memory:0x16b54eef0=30ef546b010000006070358401000000;memory:0x16b54ef30=70ef546b01000000c86f358401000000;

      program received signal 5, thread:74067;00:0000000000000000;01:0000000000000000;02:0000000000000000;03:0100000000000000;04:0000000000000000;05:8096980000000000;06:0a00000000000000;07:ffffffff00000000;08:e7ffffff00000000;09:e04faab501000000;0a:e803000000000000;0b:bc5eddb701000000;0c:bc5eddb701000000;0d:1800000000000000;0e:0100000000000000;0f:8108000000000000;10:3000000000000000;11:0000000000000000;12:5c926907f0ffffff;13:18ef546b01000000;14:006b05c401000000;15:0000000000000000;16:0000000000000000;17:0020abb501000000;18:0020abb501000000;19:0000000000000000;1a:78dce80701000000;1b:50c6aab501000000;1c:0100000000000000;1d:30ef546b01000000;1e:8070358401000000;1f:00ef546b01000000;20:8070358401000000;21:00000040;metype:6;mecount:2;medata:1;medata:184357080;memory:0x16b54ef30=70ef546b01000000c86f358401000000;memory:0x16b54ef70=a0ef546b010000004883b70501000000;

      program received signal 5, thread:74067;00:0000000000000000;01:0000000000000000;02:0000000000000000;03:0100000000000000;04:0000000000000000;05:8096980000000000;06:0a00000000000000;07:ffffffff00000000;08:e7ffffff00000000;09:e04faab501000000;0a:e803000000000000;0b:bc5eddb701000000;0c:bc5eddb701000000;0d:1800000000000000;0e:0100000000000000;0f:8108000000000000;10:3000000000000000;11:0000000000000000;12:5c926907f0ffffff;13:18ef546b01000000;14:006b05c401000000;15:0000000000000000;16:0000000000000000;17:0020abb501000000;18:0020abb501000000;19:0000000000000000;1a:78dce80701000000;1b:50c6aab501000000;1c:0100000000000000;1d:30ef546b01000000;1e:8070358401000000;1f:00ef546b01000000;20:8070358401000000;21:00000040;metype:6;mecount:2;medata:1;medata:184357080;memory:0x16b54ef30=70ef546b01000000c86f358401000000;memory:0x16b54ef70=a0ef546b010000004883b70501000000;

      program received signal 5, thread:74067;00:0000000000000000;01:0000000000000000;02:0000000000000000;03:0100000000000000;04:0000000000000000;05:8096980000000000;06:0a00000000000000;07:ffffffff00000000;08:e7ffffff00000000;09:e04faab501000000;0a:e803000000000000;0b:bc5eddb701000000;0c:bc5eddb701000000;0d:1800000000000000;0e:0100000000000000;0f:8108000000000000;10:3000000000000000;11:0000000000000000;12:5c926907f0ffffff;13:18ef546b01000000;14:006b05c401000000;15:0000000000000000;16:0000000000000000;17:0020abb501000000;18:0020abb501000000;19:0000000000000000;1a:78dce80701000000;1b:50c6aab501000000;1c:0100000000000000;1d:30ef546b01000000;1e:8070358401000000;1f:00ef546b01000000;20:8070358401000000;21:00000040;metype:6;mecount:2;medata:1;medata:184357080;memory:0x16b54ef30=70ef546b01000000c86f358401000000;memory:0x16b54ef70=a0ef546b010000004883b70501000000;

      program received signal 5, thread:74067;00:0000000000000000;01:0000000000000000;02:0000000000000000;03:0100000000000000;04:0000000000000000;05:8096980000000000;06:0a00000000000000;07:ffffffff00000000;08:e7ffffff00000000;09:e04faab501000000;0a:e803000000000000;0b:bc5eddb701000000;0c:bc5eddb701000000;0d:1800000000000000;0e:0100000000000000;0f:8108000000000000;10:3000000000000000;11:0000000000000000;12:5c926907f0ffffff;13:18ef546b01000000;14:006b05c401000000;15:0000000000000000;16:0000000000000000;17:0020abb501000000;18:0020abb501000000;19:0000000000000000;1a:78dce80701000000;1b:50c6aab501000000;1c:0100000000000000;1d:30ef546b01000000;1e:8070358401000000;1f:00ef546b01000000;20:8070358401000000;21:00000040;metype:6;mecount:2;medata:1;medata:184357080;memory:0x16b54ef30=70ef546b01000000c86f358401000000;memory:0x16b54ef70=a0ef546b010000004883b70501000000;

      hit maximum number of consecutive signals, stopping

      Run ended.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            valentyn.doroshchuk Valentyn Doroshchuk
            tinraven Niall Fraser
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes