AVFoundation: Fix crash when no video capture device

No need to configure anything if there is no video capture device.

Task-number: QTBUG-65740
Change-Id: I8de7dced14b00ab3eba560f395d7e1a4a5de1682
Reviewed-by: Andy Shaw <andy.shaw@qt.io>